# inputsimulator

./: Cargo.toml  app_data.json
src/: simulator.rs
src/ui/: components.rs
