[package]
name = "inputsimulator"
version = "0.4.0"
edition = "2021"

[features]
default = ["wayland"]
wayland = []

[dependencies]
device_query = "4"
evdev-rs = "0.6.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
log = "0.4.27"
regex = "1.11.1"
smol = "2.0.2"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
features = [
    "winit",
    "wayland",
    "wgpu",
]
